build/log/idf_py_stdout_output_26743
[1/10] Performing build step for 'bootloader'
[1/1] cd /Users/laizhiquan/coding/esp/PWM/build/bootloader/esp-idf/esptool_py && /Users/laizhiquan/.espressif/python_env/idf5.4_py3.12_env/bin/python /Users/laizhiquan/esp/v5.4.2/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/laizhiquan/coding/esp/PWM/build/bootloader/bootloader.bin
Bootloader binary size 0x6570 bytes. 0xa90 bytes (9%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
[5/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/ComplexPwmSequencer.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/ComplexPwmSequencer.cpp.obj 
/Users/laizhiquan/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.4.2-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/laizhiquan/coding/esp/PWM/build/config -I/Users/laizhiquan/coding/esp/PWM/main -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/newlib/platform_include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/freertos/config/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/freertos/config/include/freertos -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/freertos/config/xtensa/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/freertos/esp_additions/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_hw_support/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_hw_support/include/soc -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_hw_support/dma/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_hw_support/ldo/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_hw_support/port/esp32/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/heap/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/heap/tlsf -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/log/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/soc/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/soc/esp32 -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/soc/esp32/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/soc/esp32/register -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/hal/platform_port/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/hal/esp32/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/hal/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_rom/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_rom/esp32/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_rom/esp32/include/esp32 -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_rom/esp32 -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_common/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_system/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_system/port/soc -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_system/port/include/private -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/xtensa/esp32/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/xtensa/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/xtensa/deprecated_include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/lwip/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/lwip/include/apps -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/lwip/include/apps/sntp -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/lwip/lwip/src/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/lwip/port/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/lwip/port/freertos/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/lwip/port/esp32xx/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_driver_ledc/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_driver_gpio/include -I/Users/laizhiquan/esp/v5.4.2/esp-idf/components/esp_timer/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/laizhiquan/coding/esp/PWM=. -fmacro-prefix-map=/Users/laizhiquan/esp/v5.4.2/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/ComplexPwmSequencer.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/ComplexPwmSequencer.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/ComplexPwmSequencer.cpp.obj -c /Users/laizhiquan/coding/esp/PWM/main/ComplexPwmSequencer.cpp
/Users/laizhiquan/coding/esp/PWM/main/ComplexPwmSequencer.cpp: In member function 'void ComplexPwmSequencer::initialize_hardware()':
/Users/laizhiquan/coding/esp/PWM/main/ComplexPwmSequencer.cpp:24:5: warning: missing initializer for member 'ledc_channel_config_t::sleep_mode' [-Wmissing-field-initializers]
   24 |     };
      |     ^
/Users/laizhiquan/coding/esp/PWM/main/ComplexPwmSequencer.cpp: In member function 'void ComplexPwmSequencer::update()':
/Users/laizhiquan/coding/esp/PWM/main/ComplexPwmSequencer.cpp:63:12: error: enumeration value 'IDLE' not handled in switch [-Werror=switch]
   63 |     switch (local_currentState) {
      |            ^
cc1plus: some warnings being treated as errors
ninja: build stopped: subcommand failed.
